Should have separated the lores for rods and axes